# game-bot

./: .gitignore  CMakeLists.txt  README.md
include/: reversi.h  reversi_ai.h  reversi_board.h
src/: main.c  reversi_ai.c  reversi_board.c
